Fixed cardgrid-component z-index

--- a/src/scss/components/table/cardgrid.scss
+++ b/src/scss/components/table/cardgrid.scss
@@ -4,6 +4,7 @@
   max-width: 100%;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 
   &.is-dragging {
     cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), move;
